# dynamic_rviz_config

./: CMakeLists.txt  package.xml  setup.py
src/: test.py
src/dynamic_rviz_config/: __init__.py  displays.py
