<?xml version="1.0"?>
<package>
  <name>dynamic_rviz_config</name>
  <version>0.0.0</version>
  <description>The dynamic_rviz_config package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>

</package>
